--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -17,11 +17,13 @@
     "react-csv": "^2.2.2",
     "react-dom": "^18.2.0",
     "react-paginate": "8.2.0",
+    "react-router-dom": "^6.18.0",
     "react-scripts": "5.0.1",
     "react-toastify": "8.2.0",
     "sass": "1.49.10",
     "web-vitals": "^2.1.4"
   },
+  "proxy": "http://localhost:8080",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
